# osc-transformers

./: .gitignore  README-zh.md  README.md  generate.py  pyproject.toml  requirements.txt
convert/chinese_alpaca/: convert_hf.py
examples/: build_decoder.py  chinese_alpaca.cfg  decoder.cfg  llama.cfg
examples/chinese_alpaca/: config.cfg  convert_hf.py
examples/configs/: qwen3-0_6B.cfg
examples/llama/: model.cfg
osc_transformers/: __init__.py  __main__.py  block_manager.py  cli.py  config.py  decoder.py  scheduler.py  sequence.py  tokenizer.py  utils.py
osc_transformers/architectures/: __init__.py  autoregressive.py  decoder.py  transformer.py
osc_transformers/architectures/transformer/: decoder.py  encoder.py
osc_transformers/attention/: base.py  paged_attention.py
osc_transformers/feedforward/: swiglu.py
osc_transformers/helpers/: __init__.py  build.py  build_model.py  hf_model.py  huggingface.py  quantize.py  test_model.py
osc_transformers/layers/: __init__.py  activation.py  attention.py  block.py  decoder.py  dropout.py  embedding.py  feedforward.py  head.py  kv_cache.py  linear.py  mlp.py  norm.py
osc_transformers/llm/: logits_processor.py
osc_transformers/model_helpers/: __init__.py
osc_transformers/models/: llama.py
osc_transformers/normalization/: rmsnorm.py
osc_transformers/ops/: __init__.py  attention.py  rotary.py
osc_transformers/quantizers/: base.py  int4.py  int8.py
osc_transformers/sampler/: __init__.py  base.py  default.py  simple.py
osc_transformers/utils/: __init__.py  convert_hf.py
tests/: test_swiglu.py
(+5 files in other folders)
